Added HomePage with Cities, If you tap to the city it will bring you to the new activity where will be shown Current cities Weather with Celsius if smth get wrong it will bring you back to your  HomeAcitivty and HomeFragment. Added also PersonalFragment which have also Logout button.Implemented also WeatherApi and more

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.narcyber.mvpbasics">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MvpBasics"
-        tools:ignore="AllowBackup">
+        tools:ignore="AllowBackup"
+        tools:targetApi="m">
         <activity
             android:name=".view.MainActivity"
             android:launchMode="standard"
@@ -20,6 +24,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".view.WeatherActivity"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
+        <activity
+            android:name=".view.HomeActivity"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
         <activity
             android:name=".view.UserActivity"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
