--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,12 @@ android {
     buildFeatures {
         viewBinding true
     }
-
     defaultConfig {
         applicationId "com.narcyber.mvpbasics"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
@@ -33,11 +31,16 @@ android {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
-
+    implementation 'com.squareup.retrofit2:retrofit:2.0.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.0'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.3.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+
+
 }
